<resources>
    <string name="app_name">MCO</string>
    <string name="FBM">Messenger</string>
    <string name="FB">FaceBook</string>
    <string name="Tweet">Twitter</string>
    <string name="SC">SnapChat</string>
    <string name="Leisure">Leisure Alarm</string>
    <string name="Work">Work Alarm</string>
    <string name="AppTrack">Application Tracking</string>
    <string name="Exercise">Exercise</string>
    <string name="hour">hrs</string>
    <string name="minute">mins</string>
    <string name="day">days</string>
    <string name="month">months</string>
    <string name="year">yrs</string>
    <string name="discord">Discord</string>
    <string name="tts">Text-To-Speech Alarm</string>
</resources>