<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".AppTracking">
    <TextView
        android:id="@+id/AT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/AppTrack"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toLeftOf="@id/Mic"
        android:src="@drawable/progress"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        />
    <ImageButton
        android:id="@+id/Mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toLeftOf="@id/users"
        android:src="@drawable/microphone"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        />
    <ImageButton
        android:id="@+id/users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toLeftOf="@+id/add"
        android:src="@drawable/users_1"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        />
    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/newalarm"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        />

    <ImageView
        android:id="@+id/fbmLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/messenger"
        app:layout_constraintTop_toBottomOf="@id/AT"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/fbm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:text="@string/FBM"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/fbmLogo"
        app:layout_constraintTop_toBottomOf="@id/AT"/>
    <TextView
        android:id="@+id/fbmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AT"/>

    <ImageView
        android:id="@+id/fbLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook"
        app:layout_constraintTop_toBottomOf="@id/fbmLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/FB"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/fbLogo"
        app:layout_constraintTop_toBottomOf="@id/fbm"/>
    <TextView
        android:id="@+id/fbTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fbmTime"/>

    <ImageView
        android:id="@+id/twitterLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/twitter"
        app:layout_constraintTop_toBottomOf="@id/fbLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        />
    <TextView
      android:id="@+id/tweet"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="10dp"
      android:text="@string/Tweet"
      android:textSize="18sp"
      android:textColor="@color/white"
      app:layout_constraintLeft_toRightOf="@id/twitterLogo"
      app:layout_constraintTop_toBottomOf="@id/fb"/>
    <TextView
        android:id="@+id/tweetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fbTime"/>

    <ImageView
        android:id="@+id/scLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/snapchat"
        app:layout_constraintTop_toBottomOf="@id/twitterLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/SC"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/scLogo"
        app:layout_constraintTop_toBottomOf="@id/tweet"/>
    <TextView
        android:id="@+id/scTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tweetTime"/>


</androidx.constraintlayout.widget.ConstraintLayout>